# hex-movesthemind

./: .copier-answers.hexdoc-hexcasting.yml  .copier-answers.yml  .gitignore  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: build_docs.yml  release.yml
buildSrc/src/main/kotlin/movesthemind/: java.gradle.kts  minecraft.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/movesthemind/utils/: mod-dependencies.gradle.kts
common/: build.gradle.kts
common/src/main/resources/: architectury.common.json  movesthemind-common.mixins.json
common/src/main/resources/assets/movesthemind/lang/: en_us.flatten.json5
doc/: README.md  hexdoc.toml
doc/resources/assets/movesthemind/lang/: en_us.flatten.json5  zh_cn.flatten.json5
doc/src/hexdoc_movesthemind/: _hooks.py
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/latest/main/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/latest/main/en_us/basics/: index.html
docs/v/latest/main/en_us/casting/: index.html
docs/v/latest/main/en_us/creative_unlocker/: index.html
docs/v/latest/main/en_us/greatwork/: index.html
docs/v/latest/main/en_us/interop/: index.html
docs/v/latest/main/en_us/items/: index.html
docs/v/latest/main/en_us/lore/: index.html
docs/v/latest/main/en_us/patterns/: index.html
docs/v/latest/main/en_us/patterns/great_spells/: index.html
docs/v/latest/main/en_us/patterns/spells/: index.html
docs/v/latest/main/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/latest/main/zh_cn/basics/: index.html
docs/v/latest/main/zh_cn/casting/: index.html
docs/v/latest/main/zh_cn/creative_unlocker/: index.html
docs/v/latest/main/zh_cn/greatwork/: index.html
docs/v/latest/main/zh_cn/interop/: index.html
docs/v/latest/main/zh_cn/items/: index.html
docs/v/latest/main/zh_cn/lore/: index.html
docs/v/latest/main/zh_cn/patterns/: index.html
docs/v/latest/main/zh_cn/patterns/great_spells/: index.html
fabric/: build.gradle.kts
fabric/src/main/resources/: fabric.mod.json  movesthemind-fabric.mixins.json
forge/: build.gradle.kts
forge/src/main/resources/: movesthemind-forge.mixins.json  pack.mcmeta
gradle/: libs.versions.toml
src/client/java/abilliontrillionstars/movesthemind/: MovesthemindClient.java  MovesthemindDataGenerator.java
src/client/resources/: movesthemind.client.mixins.json
src/main/java/abilliontrillionstars/movesthemind/: Movesthemind.java
src/main/java/abilliontrillionstars/movesthemind/casting/: FakeplayerUtils.java  JavaMishapThrower.kt  MovesthemindPatterns.java
src/main/java/abilliontrillionstars/movesthemind/mixin/: ExampleMixin.java
src/main/resources/: fabric.mod.json  movesthemind.mixins.json
src/main/resources/assets/movesthemind/lang/: en_us.json  zh_cn.json
(+71 files in other folders)
