[build-system]
requires = [
    "hatchling",
    "hatch-gradle-version>=0.9.8",
]
build-backend = "hatchling.build"

# project metadata

[project]
name = "hexdoc-movesthemind"
description = "Adds a suite of patterns for summoning and controlling player-like entities, provided by the Carpet mod."
readme = "doc/README.md"
authors = [
    { name="abilliontrillionstars" },
]
keywords = ["hexdoc"]
requires-python = ">=3.12"
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://abilliontrillionstars.github.io/hex-movesthemind"
Source = "https://github.com/abilliontrillionstars/hex-movesthemind"

# project version

[tool.hatch.version]
scheme = "gradle"
source = "gradle-properties"
py-path = "doc/src/hexdoc_movesthemind/__version__.py"
key = "mod_version"

# Python dependencies

# required
[tool.hatch.metadata.hooks.version-catalog]
dependencies = [
    { package="hexdoc-hexcasting", op="~=", py-version="1.0", key="hexcasting" },
]

# dev-only
[dependency-groups]
dev = [
    "ruff",
]

# directory inclusion

[tool.hatch.build]
only-include = [
    "doc/src/hexdoc_movesthemind",
    "gradle.properties",
]
artifacts = [
    "/doc/src/hexdoc_movesthemind/_export/generated",
    "/doc/src/hexdoc_movesthemind/__gradle_version__.py",
]

[tool.hatch.build.targets.wheel]
sources = ["doc/src"]

# hexdoc entry points

[project.entry-points.hexdoc]
movesthemind = "hexdoc_movesthemind._hooks:MovesthemindPlugin"

# linting

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "All"

include = ["doc/src"]
extraPaths = ["doc/src"]

typeCheckingMode = "standard"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportConstantRedefinition = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStubStatement = "error"

reportDeprecated = "warning"
reportDuplicateImport = "warning"
reportMatchNotExhaustive = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "warning"
reportTypeCommentUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryCast = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryContains = "warning"
reportUnnecessaryIsInstance = "warning"
reportUntypedBaseClass = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedNamedTuple = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
